Preload screen button redesign

--- a/css/style.css
+++ b/css/style.css
@@ -58,20 +58,27 @@ body {
 }
 
 .preload-screen-btn .text {
+    position: relative;
     height: 100%;
-    width: 190px;
+    width: 189px;
     transition: .2s background ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.preload-screen-btn .border {
+    width: 1px;
+    height: 100%;
+    background: rgba(0, 0, 0, .075);
+}
+
 .preload-screen-btn .symbol {
+    position: relative;
     font-size: 30px;
     height: 100%;
     width: 60px;
     transition: .2s background ease-in-out;
-    border-left: .5px solid rgba(0, 0, 0, .075);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,38 +90,5 @@ body {
 
 .preload-screen-btn .text:hover,
 .preload-screen-btn .symbol:hover {
-    background: #68deb6;
+    background: #5ac09c;
 }
-
-/* .preload-screen-btn::after {
-    content: '';
-    display: block;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, 100%);
-    position: absolute;
-    z-index: 99;
-    width: 250px;
-    height: 250px;
-    background: #ffc400;
-    border-radius: 50%;
-    transition: .3s transform ease-in-out;
-}
-
-.preload-screen-btn::before {
-    content: 'Продолжить';
-    display: block;
-    position: absolute;
-    z-index: 100;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.preload-screen-btn:hover {
-    background: #ffc400;
-}
-
-.preload-screen-btn:hover::after {
-    transform: translate(-50%, -50%);
-} */
